%%{init: {"theme": "base", "themeVariables": {
  "fontFamily": "Segoe UI, Arial, sans-serif",
  "primaryColor": "#0f172a",
  "primaryBorderColor": "#cbd5e1",
  "primaryTextColor": "#e5e7eb",
  "lineColor": "#cbd5e1",
  "tertiaryColor": "#111827",
  "background": "transparent"
}}}%%
classDiagram
  direction TB

  class Usuario {
    +Long id
    +String nome
    +String email
    +String senha
  }

  class Drop {
    +Long id
    +String titulo
    +String conteudo
    +Date dataPublicacao
  }

  class DropDAO {
    +void salvar(Drop drop)
    +List&lt;Drop&gt; listar()
  }

  class JPAUtil {
    +EntityManager getEntityManager()
  }

  Usuario "1" <-- "0..*" Drop : autor
  DropDAO ..> Drop : persiste
  DropDAO ..> JPAUtil : obtem EntityManager
